Add admin title to page and location content types.

--- a/config/sites/default/core.entity_view_display.node.location.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.location.image_box_reference.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.image_box_reference
+    - field.field.node.location.field_admin_title
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
     - field.field.node.location.field_location_body_components
@@ -56,6 +57,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_admin_title: true
   field_location_address: true
   field_location_body: true
   field_location_body_components: true
