--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.search_index
+    - field.field.node.location.field_admin_title
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
     - field.field.node.location.field_location_body_components
@@ -118,6 +119,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_admin_title: true
   field_location_body_components: true
   field_location_card_cta: true
   field_location_card_desc: true
