--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.location.field_admin_title
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
     - field.field.node.location.field_location_body_components
@@ -53,6 +54,7 @@ third_party_settings:
       region: content
     group_description:
       children:
+        - field_admin_title
         - field_location_doctor_link
         - field_location_image
         - field_location_body
@@ -144,6 +146,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_admin_title:
+    weight: 16
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_location_address:
     weight: 15
     settings:
@@ -155,7 +165,7 @@ content:
     type: readonly_field_widget
     region: content
   field_location_body:
-    weight: 36
+    weight: 19
     settings:
       rows: 5
       placeholder: ''
@@ -164,7 +174,7 @@ content:
     region: content
   field_location_body_components:
     type: entity_reference_paragraphs
-    weight: 37
+    weight: 20
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -212,13 +222,13 @@ content:
     third_party_settings: {  }
     region: content
   field_location_doctor_link:
-    weight: 34
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_location_fax:
-    weight: 18
+    weight: 19
     settings:
       label: above
       formatter_type: null
@@ -228,14 +238,14 @@ content:
     type: readonly_field_widget
     region: content
   field_location_geo:
-    weight: 16
+    weight: 17
     settings:
       html5_geolocation: false
     third_party_settings: {  }
     type: geofield_latlon
     region: content
   field_location_hours:
-    weight: 19
+    weight: 20
     settings:
       label: above
       formatter_type: null
@@ -256,7 +266,7 @@ content:
     region: content
   field_location_image:
     type: media_library_widget
-    weight: 35
+    weight: 18
     settings:
       media_types: {  }
     third_party_settings:
@@ -264,7 +274,7 @@ content:
         show_edit: '1'
     region: content
   field_location_phone_number:
-    weight: 17
+    weight: 18
     settings:
       label: above
       formatter_type: null
@@ -290,7 +300,7 @@ content:
     type: metatag_firehose
     region: content
   field_services_ref:
-    weight: 16
+    weight: 39
     settings:
       match_operator: CONTAINS
       size: 60
