--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_admin_title
     - field.field.node.page.field_basic_components
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
@@ -71,6 +72,7 @@ third_party_settings:
     group_description:
       children:
         - title
+        - field_admin_title
         - field_text
         - field_body_components
       parent_name: group_ver
@@ -125,6 +127,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_admin_title:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_basic_components:
     type: entity_reference_paragraphs
     weight: 1
@@ -170,7 +180,7 @@ content:
     region: content
   field_body_components:
     type: entity_reference_paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -201,7 +211,7 @@ content:
     type: options_select
     region: content
   field_text:
-    weight: 3
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
