--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.location.field_admin_title
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
     - field.field.node.location.field_location_body_components
@@ -71,6 +72,7 @@ content:
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_admin_title: true
   field_location_address: true
   field_location_card_cta: true
   field_location_card_desc: true
