--- a/config/sites/default/core.entity_view_display.node.page.components.yml
+++ b/config/sites/default/core.entity_view_display.node.page.components.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.components
+    - field.field.node.page.field_admin_title
     - field.field.node.page.field_basic_components
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
@@ -35,6 +36,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_admin_title: true
   field_basic_enable_nav: true
   field_basic_header: true
   field_basic_sidebar: true
