--- a/config/sites/default/core.entity_view_display.node.page.default.yml
+++ b/config/sites/default/core.entity_view_display.node.page.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_admin_title
     - field.field.node.page.field_basic_components
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
@@ -59,6 +60,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_admin_title: true
   field_basic_components: true
   field_basic_enable_nav: true
   field_basic_header: true
