--- a/config/sites/default/views.view.workbench_edited.yml
+++ b/config/sites/default/views.view.workbench_edited.yml
@@ -2,10 +2,11 @@ uuid: 7bdcdf75-54ec-4b0d-bf49-e9c7318f2490
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_admin_title
   module:
     - node
     - user
-    - workbench_access
 _core:
   default_config_hash: S6Q66WBoJh-XbhV3sOnfwifYJByE7tkQ1tMPcDeY3ZE
 id: workbench_edited
@@ -82,6 +83,7 @@ display:
           columns:
             nid: nid
             title: title
+            field_admin_title: field_admin_title
             type: type
             status: status
             changed: changed
@@ -94,6 +96,13 @@ display:
               empty_column: false
               responsive: ''
             title:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_admin_title:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -200,7 +209,7 @@ display:
           group_type: group
           admin_label: ''
           label: Title
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -256,6 +265,69 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: title
+          plugin_id: field
+        field_admin_title:
+          id: field_admin_title
+          table: node__field_admin_title
+          field: field_admin_title
+          relationship: vid
+          group_type: group
+          admin_label: ''
+          label: 'Title (or admin title)'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: '{{ title }}'
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           plugin_id: field
         type:
           id: type
@@ -755,7 +827,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_admin_title'
   block_1:
     display_plugin: block
     id: block_1
@@ -911,7 +984,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_admin_title'
   embed_1:
     display_plugin: embed
     id: embed_1
@@ -930,4 +1004,5 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_admin_title'
