--- a/config/sites/default/views.view.workbench_moderated_content.yml
+++ b/config/sites/default/views.view.workbench_moderated_content.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_admin_title
     - system.menu.workbench
     - workflows.workflow.default
   module:
@@ -85,6 +86,7 @@ display:
           description: ''
           columns:
             title: title
+            field_admin_title: field_admin_title
             type: type
             status: status
             name: name
@@ -92,6 +94,13 @@ display:
             edit_node: edit_node
           info:
             title:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            field_admin_title:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -146,7 +155,7 @@ display:
           group_type: group
           admin_label: ''
           label: Title
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -183,6 +192,69 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_admin_title:
+          id: field_admin_title
+          table: node__field_admin_title
+          field: field_admin_title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Title (or admin title)'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: '{{ title }}'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -815,7 +887,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags: {  }
+      tags:
+        - 'config:field.storage.node.field_admin_title'
   page_1:
     display_plugin: page
     id: page_1
@@ -1064,6 +1137,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_admin_title'
         - 'config:workflow_list'
   page_2:
     display_plugin: page
@@ -1313,6 +1387,7 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_admin_title'
         - 'config:workflow_list'
   page_3:
     display_plugin: page
@@ -1562,4 +1637,5 @@ display:
         - 'user.node_grants:view'
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_admin_title'
         - 'config:workflow_list'
