Add indepedent flag to doctor profile and teaser.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
@@ -1,6 +1,6 @@
 name: "Karen A. Hoerst, MD"
-lead_title: "Medical Director, Stroke Program"
-type: 'Doctor'
+type: 'Nurse Practioner'
+employed_flag: "Not employed by Tower Health"
 rating: 4.9
 rating_icon: "star.svg"
 rating_comments: false
