modify 'type' on the location landing

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
@@ -10,7 +10,7 @@ breadcrumb:
     3:
       text: "Location Name"
 hero:
-  type: "Hospital"
+  type: "hospital"
   name: "Reading Hospital"
   address_1: "420 S. Fifth Avenue"
   address_2: "West Reading, PA 19611"
