Change hospital to Hospital for drupal.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
@@ -1,4 +1,4 @@
-type: "hospital"
+type: "Hospital"
 name: "Reading Hospital"
 address_1: "420 S. Fifth Avenue"
 address_local: "West Reading, PA 19611"
