--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/people-teaser/people-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/people-teaser/people-teaser.yml
@@ -3,6 +3,9 @@ teaser:
     src: '../../images/john-weidenhammer.png'
     alt: John Weidenhammer
   name: John Weidenhammer
-  title: Chair, Board of Trustees
-  org: Weidenhammer Systems
+  title: Chair
+  org: Board of Trustees
   title_2: President
+  org_2: Weidenhammer Systems
+  title_3: title 3
+  org_3: Organization 3
