add in some example alerts on pages

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic-page-w-components.yml
@@ -14,6 +14,9 @@ header:
   image:
     url: '../../images/AdobeStock_194014777_Preview.jpeg'
   cta: null
+alert:
+  level: high
+  content: "This alert is a 'high' level alert."
 rich_text:
   -
     paragraph_content:
